fixing the errors in api json for swagger
